# Pegasus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  migrate.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  main.py  middleware.py  pagination.py  seed.py
backend/app/models/: __init__.py  agent.py  approval.py  attachment.py  budget.py  comment.py  document.py  execution.py  knowledge.py  mcp_server.py  notification.py  output.py  planning_session.py  project.py  saved_view.py  task.py  task_template.py  team.py  time_entry.py  tracks.py  user.py  webhook.py
backend/app/routers/: activity.py  agents.py  approvals.py  attachments.py  commands.py  comments.py  dashboard.py  documents.py  export.py  knowledge.py  mcp.py  notifications.py  orchestrator.py  outputs.py  planning_workflow.py  profile.py  projects.py  saved_views.py  search.py  spotlight.py  stream.py  tasks.py  teams.py  templates.py  time_tracking.py  todos.py  tracks.py  webhooks.py
backend/app/schemas/: activity.py  agent.py  approval.py  attachment.py  comment.py  dashboard.py  dependency.py  document.py  task.py  (+16 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_agents.py  test_approvals.py  test_assignment.py  test_comments.py  test_dashboard.py  test_dependencies.py  test_documents.py  test_execution_steps.py  test_mcp.py  test_notifications.py  test_orchestrator.py  test_planning_workflow.py  test_profile.py  test_projects.py  test_tasks.py  test_teams.py  test_todos.py  test_tracks.py
(+212 files in other folders)
